--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
       <div class="progress3-value"></div>
     </div>
     <p>Not Java! 😝</p>
+    <h2>Python:</h2>
+    <div class="progress4">
+      <div class="progress4-value"></div>
+    </div>
+    <h2>C++</h2>
+    <div class="progress5">
+      <div class="progress5-value"></div>
+    </div>
   </div>
   <div class="vhr animate__animated animate__fadeIn animate__delay-1s animate__slow"><h1>|</h1></div>
   <div class="socials animate__animated animate__fadeIn animate__delay-3s animate__slow">
