--- a/index.html
+++ b/index.html
@@ -55,11 +55,10 @@
     <div class="progress2">
       <div class="progress2-value"></div>
     </div>
-    <h2>Javascript:</h2>
+    <h2>Javascript (Not Java! 😝):</h2>
     <div class="progress3">
       <div class="progress3-value"></div>
     </div>
-    <p>Not Java! 😝</p>
     <h2>Python:</h2>
     <div class="progress4">
       <div class="progress4-value"></div>
