--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         ACompleteNewb
       </span>
     </div>
-    <p>I am currently living in <b>California</b>, going through <b>8th</b> grade. My birthday is in <b><span id="countdown"></span></b> days. I also have <b>zero</b> rizz and <b>no</b> friends.</p>
+    <p>I am currently living in <b>California</b>, going through <b>8th</b> grade. My birthday is in <b><span id="countdown"></span></b> days. I currently have <b>zero</b> rizz and <b>no</b> friends. I also pull <b>nobody.</b></p>
   </div>
   <div class="vhr animate__animated animate__slideInDown animate__slow"><h1>|</h1></div>
   <div class="projects animate__animated animate__fadeIn animate__delay-1s animate__slow">
     <div class="border"></div>
     <h1>Kool stuff I made:</h1>
-    <p>DuckOS - The vewy vewy cwool web bwased opewating system 😄</p>
+    <p>DuckOS - The vewy vewy cwool web bwased opawating swissdem 😄</p>
     <br>
     <div class="horizantal">
       <div class="btn cross-btn" onclick="window.open('https://duckos.skyhax.lol', '_blank');">
@@ -42,7 +42,7 @@
       <br>
     </div>
     <br>
-    <p>Skyhax - The bwest unbwocking servwice in da woorld! (Unprwoven)</p>
+    <p>Skyhax - The bwest unbwocking survwice in da woorld! (Unprwoven)</p>
   </div>
   <div class="vhr animate__animated animate__fadeIn animate__delay-1s animate__slow"><h1>|</h1></div>
   <div class="skills animate__animated animate__fadeIn animate__delay-2s animate__slow">
