--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <div class="btn cross-btn" onclick="window.open('https://skyhax.xyz', '_blank');">
         <span>Skyhax</span>
       </div>
-      <div class="btn cross-btn">
-        <span>Nothing else lol</span>
+      <div class="btn cross-btn" onclick="window.open('https://www.highwaycpmrevenue.com/qzqb1m319g?key=970cde9179f513b49c069cf59d40fb00', '_blank');">
+        <span>Don't click</span>
       </div>
       <br>
     </div>
