--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         ACompleteNewb
       </span>
     </div>
-    <p>I am currently living in <b>California</b>, going through <b>8th</b> grade. My birthday is in <b><span id="countdown"></span></b> days. I currently have <b>zero</b> rizz and <b>no</b> friends. I also pull <b>nobody.</b></p>
+    <p>I'm currently a resident of <b>California</b>, attending 8th grade. My birthday is fast approaching, and it will be in just <b><span id="countdown"></span></b> days.<br>- Some friendless idiot</p>
   </div>
   <div class="vhr animate__animated animate__slideInDown animate__slow"><h1>|</h1></div>
   <div class="projects animate__animated animate__fadeIn animate__delay-1s animate__slow">
@@ -35,6 +35,9 @@
       </div>
       <div class="btn cross-btn" onclick="window.open('https://skyhax.xyz', '_blank');">
         <span>Skyhax</span>
+      </div>
+      <div class="btn cross-btn" onclick="window.open('https://github.com/GikitSRC/Kindler', '_blank');">
+        <span>Kindler</span>
       </div>
       <div class="btn cross-btn" onclick="window.open('https://www.highwaycpmrevenue.com/qzqb1m319g?key=970cde9179f513b49c069cf59d40fb00', '_blank');">
         <span>Don't click</span>
@@ -68,9 +71,15 @@
       <div class="progress5-value"></div>
     </div>
     <br>
-  </div>
-  <div class="vhr animate__animated animate__fadeIn animate__delay-1s animate__slow"><h1>|</h1></div>
-  <div class="socials animate__animated animate__fadeIn animate__delay-3s animate__slow">
+  </div>       
+  <div class="vhr animate__animated animate__fadeIn animate__delay-2s animate__slow"><h1>|</h1></div>
+  <div class="skills animate__animated animate__fadeIn animate__delay-2s animate__slow">
+    <h1>Certifications</h1>
+    <p>Oh, how nice. Some official looking papers I earned 😳</p>
+    <img class="certimg" src="/images/freecodecamp.png">
+  </div>       
+  <div class="vhr animate__animated animate__fadeIn animate__delay-3s animate__slow"><h1>|</h1></div>
+  <div class="socials animate__animated animate__fadeIn animate__delay-4s animate__slow">
     <h1>My Social Profiles:</h1>
     <div class="horizantal">
       <div class="socialsbtn" onclick="window.open('https://discord.gg/7UepkVT9j3', '_blank');">
