--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
   <div class="skills animate__animated animate__fadeIn animate__delay-2s animate__slow">
     <h1>Certifications</h1>
     <p>Oh, how nice. Some official looking papers I earned 😳</p>
+    <a href="https://www.freecodecamp.org/certification/ChainedTears/responsive-web-design">
     <img class="certimg" src="/images/freecodecamp.png">
+    </a>
   </div>       
   <div class="vhr animate__animated animate__fadeIn animate__delay-3s animate__slow"><h1>|</h1></div>
   <div class="socials animate__animated animate__fadeIn animate__delay-4s animate__slow">
