--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
       <div class="btn cross-btn" onclick="window.open('https://skyhax.xyz', '_blank');">
         <span>Skyhax</span>
       </div>
+      <div class="btn cross-btn" onclick="window.open('https://delta.skyhax.lol', '_blank');">
+        <span>Delta Faucet</span>
+      </div>
       <div class="btn cross-btn" onclick="window.open('https://github.com/GikitSRC/Kindler', '_blank');">
         <span>Kindler</span>
       </div>
