--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p>DuckOS - The vewy vewy cwool web bwased opawating swissdem 😄</p>
     <br>
     <div class="horizantal">
-      <div class="btn cross-btn" onclick="window.open('https://duckos.skyhax.lol', '_blank');">
+      <div class="btn cross-btn" onclick="window.open('https://skyhax.xyz/duckos.html', '_blank');">
         <span>DuckOS</span>
       </div>
       <div class="btn cross-btn" onclick="window.open('https://skyhax.xyz', '_blank');">
@@ -121,5 +121,14 @@
       bar2.style.setProperty("--cssprogress", "60%");
     }, 500);
   </script>
+  <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<script>
+  kofiWidgetOverlay.draw('chainedtears', {
+    'type': 'floating-chat',
+    'floating-chat.donateButton.text': 'Support me',
+    'floating-chat.donateButton.background-color': '#323842',
+    'floating-chat.donateButton.text-color': '#fff'
+  });
+</script>
 </body>
 </html>
