--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p>DuckOS - The vewy vewy cwool web bwased opawating swissdem 😄</p>
     <br>
     <div class="horizantal">
-      <div class="btn cross-btn" onclick="window.open('https://skyhax.xyz/duckos.html', '_blank');">
+      <div class="btn cross-btn" onclick="window.open('https://skyhax.xyz/directories/duckos.html', '_blank');">
         <span>DuckOS</span>
       </div>
       <div class="btn cross-btn" onclick="window.open('https://skyhax.xyz', '_blank');">
