--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         ACompleteNewb
       </span>
     </div>
-    <p>I'm currently a resident of <b>California</b>, attending 8th grade. <b><span id="countdown"></span></b> more days.<br>- Some friendless idiot</p>
+    <p>I'm currently a resident of <b>California</b>, attending 8th grade. <b><span id="countdown"></span></b> more days.</p>
   </div>
   <div class="vhr animate__animated animate__slideInDown animate__slow"><h1>|</h1></div>
   <div class="projects animate__animated animate__fadeIn animate__delay-1s animate__slow">
