--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
   <div class="vhr animate__animated animate__fadeIn animate__delay-1s animate__slow"><h1>|</h1></div>
   <div class="skills animate__animated animate__fadeIn animate__delay-2s animate__slow">
     <h1>My valuable (not) skills:</h1>
-    <h2>HTML:</h2>
+    <h2>HTML (Fluent):</h2>
     <div class="progress1">
       <div class="progress1-value"></div>
     </div>
+    <p>I can't seem to remember adding stylesheets for some reason no matter how hard i try so i always pull from old codes 💀😭</p>
     <h2>CSS:</h2>
     <div class="progress2">
       <div class="progress2-value"></div>
