--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="progress2">
       <div class="progress2-value"></div>
     </div>
-    <h2>Javascript (Not Java! 😝):</h2>
+    <h2>JavaScript (Not Java! 😝):</h2>
     <div class="progress3">
       <div class="progress3-value"></div>
     </div>
@@ -70,7 +70,7 @@
     <div class="progress4">
       <div class="progress4-value"></div>
     </div>
-    <h2>C++</h2>
+    <h2>C++:</h2>
     <div class="progress5">
       <div class="progress5-value"></div>
     </div>
@@ -79,7 +79,7 @@
   <div class="vhr animate__animated animate__fadeIn animate__delay-2s animate__slow"><h1>|</h1></div>
   <div class="skills animate__animated animate__fadeIn animate__delay-2s animate__slow">
     <h1>Certifications</h1>
-    <p>Oh, how nice. Some official looking papers I earned 😳</p>
+    <p>Oh, how nice! An official looking papers I earned 😳</p>
     <a href="https://www.freecodecamp.org/certification/ChainedTears/responsive-web-design">
     <img class="certimg" src="/images/freecodecamp.png">
     </a>
@@ -105,7 +105,7 @@
   </div>
   <br>
   <div class="footer animate__animated animate__fadeIn animate__delay-4s animate__slow">
-    <p>Copyright © 2023 Arthur Jiang. All rights reserved.</p>
+    <p>Copyright © 2023 Arthur Jiang</p>
   </div>
   <script src="/script.js"></script>
   <script>
