--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="/script.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3407930819317243"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
