--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <p>DuckOS - The vewy vewy cwool web bwased opawating swissdem 😄</p>
     <br>
     <div class="horizantal">
-      <div class="btn cross-btn" onclick="window.open('https://skyhax.xyz/directories/duckos.html', '_blank');">
-        <span>DuckOS</span>
+      <div class="btn cross-btn" onclick="window.open('', '_blank');">
+        <span>DuckOS - link fixed soon</span>
       </div>
       <div class="btn cross-btn" onclick="window.open('https://skyhax.xyz', '_blank');">
-        <span>Skyhax</span>
+        <span>Former Owner of Skyhax</span>
       </div>
       <div class="btn cross-btn" onclick="window.open('https://github.com/GikitSRC/browserdesk.js', '_blank');">
         <span>Browserdesk.js</span>
@@ -44,13 +44,9 @@
       <div class="btn cross-btn" onclick="window.open('https://github.com/GikitSRC/Kindler', '_blank');">
         <span>Kindler</span>
       </div>
-      <div class="btn cross-btn" onclick="window.open('https://www.highwaycpmrevenue.com/qzqb1m319g?key=970cde9179f513b49c069cf59d40fb00', '_blank');">
-        <span>Don't click</span>
-      </div>
       <br>
     </div>
     <br>
-    <p>Skyhax - The bwest unbwocking survwice in da woorld! (Unprwoven)</p>
   </div>
   <div class="vhr animate__animated animate__fadeIn animate__delay-1s animate__slow"><h1>|</h1></div>
   <div class="skills animate__animated animate__fadeIn animate__delay-2s animate__slow">
@@ -90,7 +86,7 @@
   <div class="socials animate__animated animate__fadeIn animate__delay-4s animate__slow">
     <h1>My Social Profiles:</h1>
     <div class="horizantal">
-      <div class="socialsbtn" onclick="window.open('https://discord.gg/7UepkVT9j3', '_blank');">
+      <div class="socialsbtn" onclick="window.open('', '_blank');">
         <img class="socialimg" src="/images/discord.jpg">
       </div>
       <div class="socialsbtn" onclick="window.open('https://open.spotify.com/user/qisbblpwwguw6hxn2iiw25w90', '_blank');">
