--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <p>DuckOS - The vewy vewy cwool web bwased opawating swissdem 😄</p>
     <br>
     <div class="horizantal">
-      <div class="btn cross-btn" onclick="window.open('', '_blank');">
-        <span>DuckOS - link fixed soon</span>
+      <div class="btn cross-btn" onclick="window.open('https://skyhax.xyz/directories/duckos', '_blank');">
+        <span>DuckOS</span>
       </div>
-      <div class="btn cross-btn" onclick="window.open('https://skyhax.xyz', '_blank');">
-        <span>Former Owner of Skyhax</span>
+      <div class="btn cross-btn" onclick="window.open('https://github.com/GikitSRC/LTC-Verifier', '_blank');">
+        <span>LTC Payment Verification Gateway</span>
       </div>
       <div class="btn cross-btn" onclick="window.open('https://github.com/GikitSRC/browserdesk.js', '_blank');">
         <span>Browserdesk.js</span>
