--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <span>DuckOS</span>
       </div>
       <div class="btn cross-btn" onclick="window.open('https://github.com/GikitSRC/LTC-Verifier', '_blank');">
-        <span>LTC Payment Verification Gateway</span>
+        <span>LTC Gateway</span>
       </div>
       <div class="btn cross-btn" onclick="window.open('https://github.com/GikitSRC/browserdesk.js', '_blank');">
         <span>Browserdesk.js</span>
