--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
     <a href="https://www.freecodecamp.org/certification/ChainedTears/responsive-web-design">
     <img class="certimg" src="/images/freecodecamp.png">
     </a>
+    <a href="https://www.hackerrank.com/certificates/22b2e161586c">
+    <img class="certimg" src="/images/hackerrank.png">
+    </a>
   </div>       
   <div class="vhr animate__animated animate__fadeIn animate__delay-3s animate__slow"><h1>|</h1></div>
   <div class="socials animate__animated animate__fadeIn animate__delay-4s animate__slow">
