--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="name animate__animated animate__slideInDown animate__slow">
-    <h1>Hi, my name is Arthur but I'm also known as...</h1>
+    <h1>Hi, my name is Arthur/Yanxi but I'm also known as...</h1>
     <div class="scroller">
       <span>
         Arthur<br/>
