--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <a href="https://www.freecodecamp.org/certification/ChainedTears/responsive-web-design">
     <img class="certimg" src="/images/freecodecamp.png">
     </a>
-    <a href="https://www.hackerrank.com/certificates/22b2e161586c">
+    <a id="cert2" href="https://www.hackerrank.com/certificates/22b2e161586c">
     <img class="certimg" src="/images/hackerrank.png">
     </a>
   </div>       
