--- a/index.html
+++ b/index.html
@@ -1,136 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Yanxi Jiang</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <script src="/script.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3407930819317243"
-     crossorigin="anonymous"></script>
-</head>
-
-<body>
-  <div class="name animate__animated animate__slideInDown animate__slow">
-    <h1>Hi, my name is Arthur/Yanxi but I'm also known as...</h1>
-    <div class="scroller">
-      <span>
-        Arthur<br/>
-        ChainedTears<br/>
-        1mp0ss1bl3<br/>
-        ACompleteNewb
-      </span>
-    </div>
-    <p>I'm currently a resident of <b>California</b>, attending 8th grade. My birthday is in <b><span id="countdown"></span></b> more days.</p>
-  </div>
-  <div class="vhr animate__animated animate__slideInDown animate__slow"><h1>|</h1></div>
-  <div class="projects animate__animated animate__fadeIn animate__delay-1s animate__slow">
-    <div class="border"></div>
-    <h1>Kool stuff I made:</h1>
-    <p>DuckOS - The vewy vewy cwool web bwased opawating swissdem 😄</p>
-    <br>
-    <div class="horizantal">
-      <div class="btn cross-btn" onclick="window.open('https://skyhax.xyz/directories/duckos', '_blank');">
-        <span>DuckOS</span>
-      </div>
-      <div class="btn cross-btn" onclick="window.open('https://github.com/GikitSRC/LTC-Verifier', '_blank');">
-        <span>LTC Gateway</span>
-      </div>
-      <div class="btn cross-btn" onclick="window.open('https://github.com/GikitSRC/browserdesk.js', '_blank');">
-        <span>Browserdesk.js</span>
-      </div>
-      <div class="btn cross-btn" onclick="window.open('https://github.com/GikitSRC/Kindler', '_blank');">
-        <span>Kindler</span>
-      </div>
-      <br>
-    </div>
-    <br>
-  </div>
-  <div class="vhr animate__animated animate__fadeIn animate__delay-1s animate__slow"><h1>|</h1></div>
-  <div class="skills animate__animated animate__fadeIn animate__delay-2s animate__slow">
-    <h1>My valuable (not) skills:</h1>
-    <h2>HTML (Fluent):</h2>
-    <div class="progress1">
-      <div class="progress1-value"></div>
-    </div>
-    <p>I can't seem to remember adding stylesheets for some reason no matter how hard i try so i always pull from old codes 💀😭</p>
-    <h2>CSS:</h2>
-    <div class="progress2">
-      <div class="progress2-value"></div>
-    </div>
-    <h2>Javascript (Not Java! 😝):</h2>
-    <div class="progress3">
-      <div class="progress3-value"></div>
-    </div>
-    <h2>Python:</h2>
-    <div class="progress4">
-      <div class="progress4-value"></div>
-    </div>
-    <h2>C++</h2>
-    <div class="progress5">
-      <div class="progress5-value"></div>
-    </div>
-    <br>
-  </div>       
-  <div class="vhr animate__animated animate__fadeIn animate__delay-2s animate__slow"><h1>|</h1></div>
-  <div class="skills animate__animated animate__fadeIn animate__delay-2s animate__slow">
-    <h1>Certifications</h1>
-    <p>Oh, how nice. Some official looking papers I earned 😳</p>
-    <a href="https://www.freecodecamp.org/certification/ChainedTears/responsive-web-design">
-    <img class="certimg" src="/images/freecodecamp.png">
-    </a>
-    <a id="cert2" href="https://www.hackerrank.com/certificates/22b2e161586c">
-    <img class="certimg" src="/images/hackerrank.png">
-    </a>
-  </div>       
-  <div class="vhr animate__animated animate__fadeIn animate__delay-3s animate__slow"><h1>|</h1></div>
-  <div class="socials animate__animated animate__fadeIn animate__delay-4s animate__slow">
-    <h1>My Social Profiles:</h1>
-    <div class="horizantal">
-      <div class="socialsbtn" onclick="window.open('', '_blank');">
-        <img class="socialimg" src="/images/discord.jpg">
-      </div>
-      <div class="socialsbtn" onclick="window.open('https://open.spotify.com/user/qisbblpwwguw6hxn2iiw25w90', '_blank');">
-        <img class="socialimg" src="/images/spotify.png">
-      </div>
-      <div class="socialsbtn" onclick="window.open('https://github.com/GikitSRC', '_blank');">
-        <img class="socialimg" src="/images/github.png">
-      </div>
-      <div class="socialsbtn" onclick="window.open('mailto:admin@skyhax.lol', '_blank');">
-        <img class="socialimg" src="/images/mail.jpg">
-      </div>
-    </div>
-    <p>Thanks for looking at my bio!</p>
-  </div>
-  <br>
-  <div class="footer animate__animated animate__fadeIn animate__delay-4s animate__slow">
-    <p>Copyright © 2023 Arthur Jiang. All rights reserved.</p>
-  </div>
-  <script src="/script.js"></script>
-  <script>
-    const bar = document.querySelector(".bar");
-
-    setTimeout(() => {
-      bar.style.setProperty("--htmlprogress", "90%");
-    }, 100);
-  </script>
-  <script>
-    const bar2 = document.querySelector(".bar2");
-
-    setTimeout(() => {
-      bar2.style.setProperty("--cssprogress", "60%");
-    }, 500);
-  </script>
-  <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-<script>
-  kofiWidgetOverlay.draw('chainedtears', {
-    'type': 'floating-chat',
-    'floating-chat.donateButton.text': 'Support me',
-    'floating-chat.donateButton.background-color': '#323842',
-    'floating-chat.donateButton.text-color': '#fff'
-  });
-</script>
-</body>
-</html>
+I'm making a new bio page! This might take days, weeks or even months. You can still view my old bio page at <a href="index2.html">this link</a>
