--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <pre id="terminal-output"></pre>
         <label>arthur@hyprland$ </label><input type="text" id="terminal-input" autocomplete="off">
     </div>
+    <p id="footer"></p>
     <script src="scripts/script.js"></script>
 </body>
 </html>
